apply plugin: 'java'
apply plugin: 'maven'

group = 'net.will_co21.format'
version = '0.0.1-SNAPSHOT'

description = """"""

sourceCompatibility = 1.8
targetCompatibility = 1.8



repositories {

     maven { url "http://repo.maven.apache.org/maven2" }
}
dependencies {
	testCompile 'junit:junit:4.+'
}
tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}
